# The-Station

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  FindSFML.cmake  README.md  Section.h  The Station.h  gui.pdn  item.cpp  item.h  main.cpp  nagrania.aup  oldgui.pdn  sfmltest.cbp  sfmltest.cscope_file_list  sfmltest.depend  sfmltest.layout
The Station/: The Station.vcxproj  The Station.vcxproj.filters
The Station/Debug/: CL.read.1.tlog  CL.write.1.tlog  The Station.lastbuildstate  The Station_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
data/: extensions.txt  folder_names.txt  id_list.txt  images.txt
img/paint.net projects/: BossRoom.pdn  Chest.pdn  Inventory.pdn  Medkit.pdn  player2.pdn  player3.pdn
include/: CMob.h  Character.h  Explosion.h  ImagePool.cpp  ImagePool.h  Projectile.h  Room.h  Station.h  The_Station.h  item.h  projectile.h  tile.h  tiledrop.h
sfmltest/: Room.h  Section.cpp  Station.cpp  Station.h  The Station.h  explosion.cpp  explosion.h  main.cpp  projectile.cpp  tiledrop.cpp
shaders/: Player.frag
sounds/: nagrania.aup
src/: CMob.cpp  Character.cpp  Character.h  Explosion.cpp  Explosion.h  FloorTile.h  GameOption.h  GameState.h  Globals.cpp  Globals.h  Menu.h  MenuAction.h  Projectile.cpp  Projectile.h  ResourceNotFoundError.h  ResourcePool.h  Room.cpp  Room.h  Station.cpp  The Station.cpp  TileDrop.cpp  TileDrop.h  item.cpp  item.h  main.cpp  new_main.cpp
src/Deprecated/: Character.cpp  Character.h  EventContainer.cpp  EventContainer.h  FloorTile.h  GameState.cpp  GameState.h  MenuAction.cpp  Room.cpp  Section.h  TileDrop.cpp  item.cpp  old_main.cpp
src/Events/: EventContainer.cpp  EventContainer.h  EventManager.cpp  EventManager.h  Observable.h  Observer.h
src/Exceptions/: ResourceNotFoundError.cpp  ResourceNotFoundError.h
src/Filesystem/: Filesystem.cpp  Filesystem.h
src/Globals/: Globals.cpp  Globals.h  Math.cpp  Math.h
src/Logging/: Logger.cpp  Logger.h
src/Models/: Border.cpp  Border.h  GameObject.cpp  GameObject.h  GameOption.h  Menu.h  MenuAction.h  Player.cpp  Player.h  ScreenEdge.cpp  ScreenEdge.h
src/Models/Behaviour/: Controllable.cpp  Controllable.h
src/Models/Menus/: Menu.h  MenuAction.h  MenuManager.cpp  MenuManager.h
src/Rendering/: Collidable.h  CollisionCircle.cpp  CollisionCircle.h  CollisionDetector.cpp  CollisionDetector.h  CollisionGraph.cpp  CollisionGraph.h  CollisionNegativeRectangle.cpp  CollisionNegativeRectangle.h  CollisionRectangle.cpp  CollisionRectangle.h  CollisionShape.cpp  CollisionShape.h  Renderable.h  Renderer.cpp  Renderer.h
src/ResourceManagers/: EventContainer.cpp  EventContainer.h  EventManager.cpp  EventManager.h  ImagePool.cpp  ImagePool.h  ResourcePool.h  ShaderPool.cpp  ShaderPool.h  TexturePool.cpp  TexturePool.h
src/Time/: Time.cpp  Time.h
tests/: DummyWindow.cpp  DummyWindow.h  test.cpp
